k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: beltagy-portfolio
spec:
  selector:
    app: beltagy-portfolio
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
